plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'vpn'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Web для REST API
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // Thymeleaf для HTML шаблонов
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    
    // Spring Data JPA для работы с БД
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // PostgreSQL драйвер
    runtimeOnly 'org.postgresql:postgresql'
    
    // ZXing для генерации QR кодов
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
    
    // gRPC для взаимодействия с Xray API (совместимые версии!)
    implementation 'io.grpc:grpc-netty-shaded:1.60.0'
    implementation 'io.grpc:grpc-protobuf:1.60.0'
    implementation 'io.grpc:grpc-stub:1.60.0'
    implementation 'com.google.protobuf:protobuf-java:3.25.1'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
    
    // DevTools для hot-reload в режиме разработки
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // Lombok для упрощения кода
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Gson для работы с JSON конфигами Xray
    implementation 'com.google.code.gson:gson:2.10.1'
    
    // Валидация
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.25.1"
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.60.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
